--- a/css/styles.css
+++ b/css/styles.css
@@ -82,15 +82,19 @@ p {
   text-align: left;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 992px) { image display: none}{
   #title {
-    text-align: center;
+    text-align: left;
+    font-size: 2rem;
   }
 
-  /* .phone-image {
-    width: 30%;
-    position: static;
-  } */
+  .iphone {
+    width: 75px;
+    height: 75px; 
+    position: absolute;
+    background-repeat: no-repeat;
+
+  }
 }
 
 /* Title Image */
@@ -99,7 +103,7 @@ p {
   width: 20%;
   right: 20%;
   position: absolute;
-  margin: 200px 0;
+  margin: 80px 0 200px 0;
 }
 
 /* Feature Section */
@@ -193,6 +197,11 @@ p {
   color: gray;
 }
 
-#footer {
-  padding-top: 10%; 
+
+
+.footer {
+  padding-top: 10%;
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
 }
