--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  color: #8f8f8f;
+  color: #FFFFFF;
 }
 
 /* Headings */
@@ -37,7 +37,7 @@ p {
   line-height: 1.5;
   font-size: 3rem;
   font-weight: 700;
-  padding-top: 100px; 
+  padding-top: 175px; 
 }
 
 .section-heading {
